--- a/app/views/category.html
+++ b/app/views/category.html
@@ -13,13 +13,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/url/of/next/page" method="post">
+      <form class="form" action="/title" method="post">
 
         {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
         {{ govukRadios({
-        idPrefix: "what-category",
-        name: "what-category",
+        idPrefix: "category",
+        name: "category",
         fieldset: {
         legend: {
         text: "What category is your item in?",
@@ -29,15 +29,15 @@
         },
         items: [
         {
-        value: "electronics",
+        value: "Electronics",
         text: "Electronics"
         },
         {
-        value: "furniture",
+        value: "Furniture",
         text: "Furniture"
         },
         {
-        value: "kitchenware",
+        value: "Kitchenware",
         text: "Kitchenware"
         },
         {
