--- a/app/views/title.html
+++ b/app/views/title.html
@@ -13,7 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/url/of/next/page" method="post">
+      <form class="form" action="/description" method="post">
 
         {% from "govuk/components/input/macro.njk" import govukInput %}
 
