pages remember previous answers when user clicks change

--- a/app/views/board.html
+++ b/app/views/board.html
@@ -30,15 +30,18 @@
         items: [
         {
         value: "London",
-        text: "London"
+        text: "London",
+        checked: checked("location", "London")
         },
         {
         value: "Manchester",
-        text: "Manchester"
+        text: "Manchester",
+        checked: checked("location", "Manchester")
         },
         {
         value: "Leeds",
-        text: "Leeds"
+        text: "Leeds",
+        checked: checked("location", "Leeds")
         },
         {
         divider: "or"
