--- a/app/views/category.html
+++ b/app/views/category.html
@@ -30,15 +30,18 @@
         items: [
         {
         value: "Electronics",
-        text: "Electronics"
+        text: "Electronics",
+        checked: checked("category", "Electronics")
         },
         {
         value: "Furniture",
-        text: "Furniture"
+        text: "Furniture",
+        checked: checked("category", "Furniture")
         },
         {
         value: "Kitchenware",
-        text: "Kitchenware"
+        text: "Kitchenware",
+        checked: checked("category", "Kitchenware")
         },
         {
         divider: "or"
