--- a/app/views/title.html
+++ b/app/views/title.html
@@ -24,7 +24,8 @@
         isPageHeading: true
         },
         id: "title",
-        name: "title"
+        name: "title",
+        value: data['title']
         }) }}
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
