--- a/app/views/check-answers.html
+++ b/app/views/check-answers.html
@@ -25,7 +25,7 @@
             {{ data['location'] }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a href="#">
+            <a href="/board">
               Change
               <span class="govuk-visually-hidden"> title</span>
             </a>
@@ -39,7 +39,7 @@
             {{ data['category'] }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a href="#">
+            <a href="/category">
               Change
               <span class="govuk-visually-hidden"> date of birth</span>
             </a>
@@ -53,7 +53,7 @@
             {{ data['title'] }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a href="#">
+            <a href="/title">
               Change
               <span class="govuk-visually-hidden"> title</span>
             </a>
@@ -67,7 +67,7 @@
             {{ data['description'] }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a href="#">
+            <a href="/description">
               Change
               <span class="govuk-visually-hidden"> date of birth</span>
             </a>
@@ -78,10 +78,10 @@
             Price
           </dt>
           <dd class="govuk-summary-list__value">
-            £{{ data['cost'] }}
+            £{{ data['price'] }}
           </dd>
           <dd class="govuk-summary-list__actions">
-            <a href="#">
+            <a href="/price">
               Change
               <span class="govuk-visually-hidden"> contact information</span>
             </a>
